--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,7 +1,7 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
-@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Raleway&display=swap');
 
 /** Ionic CSS Variables **/
 
