--- a/src/pages/AllCharacters.css
+++ b/src/pages/AllCharacters.css
@@ -2,6 +2,14 @@
     border: 1px solid var(--ion-color-primary);
 }
 
-.input-search ion-input {}
+.input-search .native-input {
+    padding: 10px;
+}
 
 .item-search {}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
